--- a/modulo-4/cap 25/mq004/estios/media-query.css
+++ b/modulo-4/cap 25/mq004/estios/media-query.css
@@ -1,1 +1,21 @@
 @charset "UTF-8";
+@media screen and(min-width: 768px) and (max-width: 992px){
+    body{
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+    img#phone{display: none;}
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#tv{display: none;}
+
+
+}
+@media screen and(min-width:1200px){
+    body{
+        background-image: url('../imagens/back-tv.jpg');
+    }
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#tv{display: block;}
+}
